--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,11 @@
 *.dll
 *.so
 *.dylib
+outagemock
 
 # Test binary, built with `go test -c`
 *.test
+test_*
 
 # Code coverage profiles and other test artifacts
 *.out
